plugins {
    id 'java'
}

group = 'com.saar'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

//configurations {
//    all*.exclude module: 'log4j.properties'
//}


//sourceSets {
//    main {
//        java {
//            srcDir 'src/main/java'
//        }
//        resources {
//            srcDir 'src/main/resources'
//        }
//    }
//    test {
//        java {
//            srcDir 'src/test/java'
//        }
//    }
//}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    compileOnly 'org.projectlombok:lombok:1.18.28'
}

test {
    useJUnitPlatform()
}
